# OCR

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PROJECT_PLAN.md  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_create_jobs.py
backend/datasets/: arabic.json  english.json  hebrew.json  low_quality.json  mixed.json  rotated.json  tables.json  urdu.json
backend/src/ocr_platform/: __init__.py  config.py  logging_config.py  main.py  worker.py
backend/src/ocr_platform/api/: __init__.py  benchmark.py  datasets.py  health.py  jobs.py  metrics.py  ocr.py  workers.py
backend/src/ocr_platform/benchmark/: __init__.py  metrics.py  models.py  service.py  store.py
backend/src/ocr_platform/datasets/: __init__.py  loader.py  models.py  registry.py
backend/src/ocr_platform/db/: __init__.py  engine.py  models.py  repository.py  sync.py
backend/src/ocr_platform/jobs/: __init__.py  aggregator.py  celery_app.py  circuit_breaker.py  models.py  store.py  tasks.py
backend/src/ocr_platform/middleware/: __init__.py  logging.py
backend/src/ocr_platform/preprocessing/: __init__.py  document.py  types.py
backend/src/ocr_platform/providers/: __init__.py  base.py  mistral.py  mock.py  models.py  registry.py
backend/tests/: __init__.py  test_health.py  test_metrics.py  test_middleware.py  test_ocr.py  test_placeholder.py  test_workers.py
backend/tests/test_benchmark/: test_benchmark_api.py  test_metrics.py  test_service.py  test_store.py
backend/tests/test_datasets/: test_api.py  test_loader.py  test_registry.py
backend/tests/test_db/: test_models.py
backend/tests/test_jobs/: test_aggregator.py  test_api.py  test_circuit_breaker.py  test_models.py  test_store.py  test_tasks.py
backend/tests/test_locust/: test_locustfile.py
backend/tests/test_preprocessing/: test_document.py  test_types.py
backend/tests/test_providers/: test_base.py  test_mistral.py  test_mock_provider.py  test_models.py  test_registry.py  test_swap.py
frontend/: Dockerfile  README.md  index.html  package.json
frontend/src/: App.jsx
frontend/src/components/: Navbar.jsx
frontend/src/pages/: BenchmarksPage.jsx  DatasetsPage.jsx  JobsPage.jsx
frontend/src/services/: api.js
locust/: README.md  locustfile.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml  ocr-dashboard.json
scripts/: scale-workers.sh
