[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-platform"
version = "0.1.0"
description = "Backend service for the OCR Benchmark Platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "OCR Platform Team" },
]
keywords = ["ocr", "benchmark", "fastapi", "celery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "celery[redis]>=5.4",
    "fastapi>=0.111",
    "httpx>=0.27",
    "Pillow>=10.0",
    "prometheus-client>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pymupdf>=1.23",
    "python-multipart>=0.0.9",
    "structlog>=24.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "httpx>=0.27",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/ocr-platform/ocr-benchmark-platform"
Repository = "https://github.com/ocr-platform/ocr-benchmark-platform"

# ───────────────────────────────────────────────
# Tool configurations
# ───────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "ERA", # eradicate
    "PL",  # Pylint
    "PERF",# perflint
]
ignore = [
    "E501",  # Line too long (handled by black)
    "B008",  # FastAPI File/Form defaults are idiomatic
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["ocr_platform"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "ARG002"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
]

[[tool.mypy.overrides]]
module = ["tests.*", "prometheus_client.*", "celery.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
